# fileformat

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: FileFormatConfig.cmake.in
docs/: API.md  DEVELOPMENT.md  QUICKSTART.md
examples/: CMakeLists.txt  detect_batch.cpp  detect_file.cpp
include/fileformat/: detector.hpp  fileformat.hpp  types.hpp
openspec/: project.md
openspec/changes/add-single-file-integration/: proposal.md  tasks.md
openspec/changes/add-single-file-integration/specs/file-format-detection/: spec.md
openspec/changes/archive/2025-12-11-add-file-format-detection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-file-format-detection/specs/file-format-detection/: spec.md
openspec/specs/file-format-detection/: spec.md
single/: fileformat_single.hpp  test_single.cpp
src/: detector.cpp
src/formats/: archive.cpp  document.cpp  ebook.cpp  executable.cpp  image.cpp  media.cpp
testfiles/: check_all.bat
tests/: CMakeLists.txt  test_api.cpp  test_archive.cpp  test_document.cpp  test_ebook.cpp  test_executable.cpp  test_image.cpp  test_media.cpp  test_robustness.cpp
